--- a/2024 Python_L2.ipynb
+++ b/2024 Python_L2.ipynb
@@ -37,12 +37,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b4024bca-63ba-483f-a0ab-892e01b645bb",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Try out the different relational operators, you can change the values\n",
     "print(2024 < 2024)\n",
@@ -89,10 +104,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7d1422a9-a409-42f8-be9d-2257fe9098e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your age:  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You need to wait 12 more years to vote\n"
+     ]
+    }
+   ],
    "source": [
     "# if-else example\n",
     "# Complete the following program, print out the number of years the user has to wait to be able to vote.\n",
@@ -101,14 +131,21 @@
     "age = int(age)\n",
     "if age >= 21:\n",
     "    print(\"You are old enough to vote!\")\n",
-    "    \n",
+    "else:\n",
+    "   age_needed = 21 - age\n",
+    "print(\"You need to wait\" , age_needed , \"more years to vote.\")\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "0b0d5885-7de2-44b8-8f72-db4095c81191",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### **if-elif-else** \n",
     "`if-elif-else` statements are used when there are more than 2 possible outcomes.   \n",
